--- a/src/app/modules/ClassSubject/subject-types/subject-types.component.html
+++ b/src/app/modules/ClassSubject/subject-types/subject-types.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div> -->
     <div style="padding:15px 15px 10px 15px;">
         <div><strong>Subject Types</strong></div>
     </div>
@@ -63,4 +63,4 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
     </mat-table>
-</div>
+<!-- </div> -->
