--- a/src/app/modules/studentexam/examncalculate/examncalculate.component.html
+++ b/src/app/modules/studentexam/examncalculate/examncalculate.component.html
@@ -80,4 +80,14 @@
             Popover on top
         </button> -->
     </div>
+    <div style="margin-top:30px;" data-expand="false" #expandWrap>
+        <span *ngIf="expandWrap.dataset.expand == 'false'" (click)="expandWrap.dataset.expand = 'true'">
+            <mat-icon>info</mat-icon>
+            Guides..</span>
+        <span *ngIf="expandWrap.dataset.expand == 'true'" (click)="expandWrap.dataset.expand = 'false'">
+            <ul>
+                <li>This screen is for defining items to dsiplay in exam result.</li>
+            </ul>
+        </span>
+    </div>
 </div>
