--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
@@ -28,7 +28,7 @@
             </mat-icon>
         </button>
     </form>
-    <p>Record will be displayed if it is defined in class subject module.</p>
+
     <mat-divider></mat-divider>
     <mat-table #table [dataSource]="dataSource">
         <ng-container matColumnDef="ClassName">
@@ -75,32 +75,14 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
     </mat-table>
-    <!-- <div style="margin:10px; border-bottom:1px solid lightgray;overflow: hidden;" fxLayout="row wrap"
-        *ngFor="let row of ClassWiseSubjectDisplay;let indx=index;">
-        <div style="padding:10px; min-width: 130px;">{{row['ClassName']}}</div>
-        <div style="max-width:600px;display:flex; flex-direction: row;flex-wrap: wrap;padding: 10px 0px 5px 0px">
-             *ngIf="cell.key!='ClassName' && cell.key!='Action' && cell.key!='Selected'"
-            <mat-radio-group *ngFor="let cell of row|keyvalue" [name]="'gname'+indx">
-                <mat-radio-button style="margin-right: 15px;"
-                    
-                    [name]="'gname'+indx"
-                    [value]="cell"
-                    (change)="updateActive(row,$event,cell.key)" 
-                    [checked]="cell.value===1" 
-                    >
-                    {{cell.key}}
-                </mat-radio-button>
-            </mat-radio-group>
-           
-        </div>
-
-        <button [disabled]="loading || Permission=='read' || !row.Action" matTooltip="save" 
-mat-raised-button color="accent"
-            (click)="SaveRow(row)">
-             <mat-icon>save</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
-        </button>
-    </div> -->
+    <div style="margin-top:30px;" data-expand="false" #expandWrap>
+        <span *ngIf="expandWrap.dataset.expand == 'false'" (click)="expandWrap.dataset.expand = 'true'">
+            <mat-icon>info</mat-icon>
+            Guides..</span>
+        <span *ngIf="expandWrap.dataset.expand == 'true'" (click)="expandWrap.dataset.expand = 'false'">
+            <ul>
+                <li>Items will be displayed if it is defined in class subject menu.</li>
+            </ul>
+        </span>
+    </div>
 </div>
