--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,7 +60,7 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent);
 
 mat-card {
     margin-left  : 5px;
-    width:80vw;
+    //width:80vw;
     //min-height : 100vh;
 
 }
